# aoc

./: 2020-12-01.hs  2020-12-02.hs  2021-12-01.hs  2021-12-02.hs  2021-12-03.hs  2021-12-04.hs  2021-12-05.hs  Common.hs  aoc-template.cabal  aoc.cabal  default.nix  shell.nix
app/: 2020day1.hs  2020day2.hs  Day1Of2020.hs  Day2Of2020.hs  Main.hs
src/: Common.hs
