cabal-version:      2.4
name:               aoc
version:            0.1.0.0
synopsis:           https://adventofcode.com
license:            MIT
author:             Even Brenden
maintainer:         evenbrenden@gmail.com

executable day1of2020
    main-is:          Day1Of2020.hs
    build-depends:    base ^>=4.14.1.0, trifecta
    hs-source-dirs:   app
    default-language: Haskell2010

executable day2of2020
    main-is:          Day2Of2020.hs
    build-depends:    base ^>=4.14.1.0, trifecta
    hs-source-dirs:   app
    default-language: Haskell2010
