cabal-version:        2.4
name:                 aoc
version:              0.1.0.0
synopsis:             https://adventofcode.com
license:              MIT
author:               Even Brenden
maintainer:           evenbrenden@gmail.com

library
    exposed-modules:  Common
    build-depends:    base ^>=4.14.1.0, trifecta
    hs-source-dirs:   src
    default-language: Haskell2010

executable 2020day1
    main-is:          2020day1.hs
    build-depends:    base ^>=4.14.1.0, trifecta, aoc
    hs-source-dirs:   app
    default-language: Haskell2010

executable 2020day2
    main-is:          2020day2.hs
    build-depends:    base ^>=4.14.1.0, trifecta, aoc
    hs-source-dirs:   app
    default-language: Haskell2010
